--- a/정규표현식.ipynb
+++ b/정규표현식.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d4f303ed",
+   "id": "7fb4c388",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "800641b8",
+   "id": "ea112c0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "50278711",
+   "execution_count": 2,
+   "id": "570b19e9",
    "metadata": {},
    "outputs": [
     {
@@ -58,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "128cee45",
+   "execution_count": 3,
+   "id": "1f040508",
    "metadata": {},
    "outputs": [
     {
@@ -90,8 +90,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "473e9aa0",
+   "execution_count": 4,
+   "id": "15031d12",
    "metadata": {},
    "outputs": [
     {
@@ -120,6 +120,130 @@
     "\n",
     "for item in iter:\n",
     "    print(item, item.group())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6846ee90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tel <re.Match object; span=(1, 14), match='010-1234-5678'> 010-1234-5678\n",
+      "tel <re.Match object; span=(19, 32), match='032-9876-5432'> 032-9876-5432\n",
+      "tel <re.Match object; span=(37, 49), match='02-4567-8901'> 02-4567-8901\n",
+      "tel <re.Match object; span=(1, 14), match='010-1234-5678'> {'area': '010', 'exchange': '1234', 'number': '5678'}\n",
+      "tel <re.Match object; span=(19, 32), match='032-9876-5432'> {'area': '032', 'exchange': '9876', 'number': '5432'}\n",
+      "tel <re.Match object; span=(37, 49), match='02-4567-8901'> {'area': '02', 'exchange': '4567', 'number': '8901'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 예제\n",
+    "# 전화번호\n",
+    "source = \"\"\"\n",
+    "010-1234-5678 홍길동\n",
+    "032-9876-5432 고길동\n",
+    "02-4567-8901 장길산\n",
+    "\"\"\"\n",
+    "\n",
+    "pattern = re.compile(r\"\\d{2,3}-\\d{3,4}-\\d{4}\")\n",
+    "\n",
+    "iter = pattern.finditer(source)\n",
+    "for tel in iter:\n",
+    "    print(\"tel\",tel, tel.group())\n",
+    "    \n",
+    "# 패턴 작성시 (?<이름>) 형식을 이용하면 매칭 결과에 이름을 부여할 수 있다.\n",
+    "# 이름이 부여된 매칭 결과는 groupdict() 메서드로 확인\n",
+    "\n",
+    "pattern = re.compile(r\"(?P<area>\\d{2,3})-(?P<exchange>\\d{3,4})-(?P<number>\\d{4})\")\n",
+    "iter = pattern.finditer(source)\n",
+    "for tel in iter:\n",
+    "    print(\"tel\", \n",
+    "          tel,\n",
+    "          tel.groupdict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7a676d6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hong@hwalbin.org\n",
+      "jang@thieves.net\n",
+      "gildong@dooly.net\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 예제 2\n",
+    "# 이메일 추출하기\n",
+    "source =\"\"\"\n",
+    "홍길동 hong@hwalbin.org\n",
+    "장길산 jang@thieves.net\n",
+    "고길동 gildong@dooly.net\n",
+    "\"\"\"\n",
+    "\n",
+    "pattern = re.compile(r\"\\w+[\\w\\.]*@\\w+\\.[a-z]+\")\n",
+    "iter = pattern.finditer(source)\n",
+    "\n",
+    "for email in iter:\n",
+    "    print(email.group())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b92076fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['대한민국', '홍길동', '장길산']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 한국어 패턴\n",
+    "source = \"English 대한민국 Japan 홍길동 China 장길산\"\n",
+    "p = re.compile(r\"[ㄱ-힣]+\") #Unicode의 범위\n",
+    "\n",
+    "print(p.findall(source))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7f3daf0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pattern Split: ['사과', '오렌지', '바나나', '토마토', '수박']\n",
+      "Pattern Sub 사과-오렌지-바나나-토마토-수박\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split : 단순문자열이 아닌 패턴을 이용해서 문자열을 분할\n",
+    "source = \"사과 오렌지:바나나,토마토|수박\"\n",
+    "pattern = r\"[ :,|]\"\n",
+    "print(\"Pattern Split:\", re.split(pattern, source))\n",
+    "\n",
+    "# sub : 단순문자열이 아닌 패턴 매칭을 이용한 변경\n",
+    "print(\"Pattern Sub\", re.sub(pattern, \"-\", source)) # 패턴 매칭 후 -> -변경"
    ]
   }
  ],
