네이버뉴스 API 예제

--- a/data/Beautiful Soup.ipynb
+++ b/data/Beautiful Soup.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "96a8fe85",
+   "id": "3a9206ce",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ab73e9b2",
+   "id": "89c5ae03",
    "metadata": {},
    "outputs": [
     {
@@ -88,14 +88,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9885ec06",
+   "id": "eea8ca89",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<list_iterator object at 0x0000020D2C513820> <class 'list_iterator'>\n",
+      "<list_iterator object at 0x000001DD2B25E130> <class 'list_iterator'>\n",
       "head <class 'bs4.element.Tag'>\n",
       "body <class 'bs4.element.Tag'>\n",
       "body has div tag\n",
@@ -145,8 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b3fcd4b0",
+   "execution_count": 4,
+   "id": "9412d83a",
    "metadata": {},
    "outputs": [
     {
@@ -187,8 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e8e37c8e",
+   "execution_count": 5,
+   "id": "f4bce505",
    "metadata": {},
    "outputs": [
     {
@@ -233,8 +233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c7eee079",
+   "execution_count": 6,
+   "id": "5355c789",
    "metadata": {},
    "outputs": [
     {
